--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   version: "v0.1.0"
   homepage: "https://github.com/robolague/kubectl-ball"
-  shortDescription: "Run kubectl commands across multiple clusters"
+  shortDescription: "Run kubectl commands across multiple clusters with fzf selection"
   description: |
-    kubectl-ball helps you run commands across many Kubernetes clusters.
-    Use fzf to select clusters, sync namespaces, and grep or format output easily.
+    kubectl-ball helps you run kubectl commands across multiple clusters using fzf-based selection.
+    You can persist selections, share namespace settings, grep across clusters, format output (e.g., JSON/YAML), and run commands in parallel.
 
   platforms:
   - selector:
@@ -16,7 +16,7 @@ spec:
         os: linux
         arch: amd64
     uri: https://github.com/robolague/kubectl-ball/releases/download/v0.1.0/kubectl-ball_linux_amd64.tar.gz
-    sha256: "<computed-sha>"
+    sha256: "<REPLACE_WITH_LINUX_SHA256>"
     bin: kubectl-ball
 
   - selector:
@@ -24,5 +24,5 @@ spec:
         os: darwin
         arch: amd64
     uri: https://github.com/robolague/kubectl-ball/releases/download/v0.1.0/kubectl-ball_darwin_amd64.tar.gz
-    sha256: "<computed-sha>"
+    sha256: "<REPLACE_WITH_DARWIN_SHA256>"
     bin: kubectl-ball
