--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,12 @@ jobs:
           go-version: '1.24'
       - name: Download dependencies
         run: go mod download
+      - name: Verify dependencies
+        run: go mod verify
+      - name: Tidy dependencies
+        run: go mod tidy
       - name: Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.58.0
       - name: Run golangci-lint
-        run: $(go env GOPATH)/bin/golangci-lint run 
+        run: $(go env GOPATH)/bin/golangci-lint run --disable=typecheck --allow-parallel-runners 
