--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         goos: [linux, darwin]
-        goarch: [amd64]
+        goarch: [amd64, arm64]
 
     steps:
     - uses: actions/checkout@v3
